--- a/404.html
+++ b/404.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: "404: Page not found"
+title: "页面未找到"
 permalink: 404.html
 ---
 
 <div class="page">
-  <h1 class="page-title">404: Page not found</h1>
-  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="{{ site.baseurl }}/">Head back home</a> to try finding it again.</p>
+  <h1 class="page-title">404：页面未找到</h1>
+  <p class="lead">对不起，当前链接无法找到，请核对链接。 <a href="{{ site.baseurl }}/">点此返回主页</a></p>
 </div>
